--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-ble-manager": "^8.4.3",
-    "react-native-nordic-dfu": "^3.2.1"
+    "react-native-nordic-dfu": "^3.2.1",
+    "expo": "^45.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
